[gd_scene load_steps=6 format=3 uid="uid://cff480jogqfu0"]

[ext_resource type="Script" path="res://scripts/entities/night_quests/hint_sheets.gd" id="1_7t1ol"]
[ext_resource type="FontFile" uid="uid://cexce5of08bnj" path="res://assets/fonts/hints/ShadowsIntoLight-Regular.ttf" id="2_xpyw6"]
[ext_resource type="FontFile" uid="uid://cahhshh5yubg0" path="res://assets/fonts/Lacquer-Regular.ttf" id="6_68wwc"]
[ext_resource type="AudioStream" uid="uid://budjmcsn74ca5" path="res://assets/hints/hint.ogg" id="7_kj1dl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y5hru"]
bg_color = Color(0.960784, 0.870588, 0.701961, 1)

[node name="Hint3Sheet" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_7t1ol")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 360.0
offset_right = -384.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.960784, 0.870588, 0.701961, 1)

[node name="text" type="RichTextLabel" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 13.0
offset_right = -8.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/table_border = Color(0, 0, 0, 1)
theme_override_colors/table_even_row_bg = Color(0, 0, 0, 1)
theme_override_colors/table_odd_row_bg = Color(0, 0, 0, 1)
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_xpyw6")
theme_override_font_sizes/normal_font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_y5hru")
text = "On my drive into town today, I noticed a large hazmat crew gathered around the warehouse shouting at people passing by. Their were an awful lot of them standing around, monitoring the area as if something bad has happened. I wonder what was going on with it.

                             -L"

[node name="close_button" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -25.0
offset_top = -82.0
offset_right = 25.0
offset_bottom = -51.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_68wwc")
text = "Close"

[node name="close_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_kj1dl")
bus = &"SFX"

[connection signal="pressed" from="ColorRect/close_button" to="." method="_on_close_button_pressed"]
